# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml  subscription_tests.http
.github/: audit.yml
.github/workflows/: audit.yml
configuration/: production.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
